--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     Are you voting this midterm election? Upload an image to this collaborative photomosaic and help remind everyone that their vote matters.
   </div>
 
-  <div class="form">
-    <input placeholder="your name" type="text" maxlength="300" id="name"/>
-    <input placeholder="your email" type="text" maxlength="300" id="email"/>
+  <!-- https://script.google.com/macros/s/AKfycbzMi5e-JvqNAQc78M06Iw1E2Gy1jzGl4A7OQXfRZuxpa01Vmxxa/exec -->
+  <form name="submit-to-google-sheet" class="form">
+    <input name="name" placeholder="your name" type="text" maxlength="300" id="name"/>
+    <input name="email" placeholder="your email" type="text" maxlength="300" id="email"/>
     <input type="file" name="image" accept="image/*" id="add-photo">
-  </div>
+    <button type="submit" id="submit-form"> Submit </button>
+  </form>
 
   <div class="logos">
     <img src="https://resize.pubpub.org/fit-in/0x200/c7cfyyz6/31507218538557.png" alt="viral-communications" width="90%">
@@ -28,4 +30,5 @@
 
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="jquery.serialize-object.min.js"></script>
 <script type="module" src="script.js"></script>
