--- a/index.html
+++ b/index.html
@@ -29,6 +29,31 @@
 
 
 <script src="https://d3js.org/d3.v4.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script src="jquery.serialize-object.min.js"></script>
+<script>
+  var $form = $('form'),
+    url = 'https://script.google.com/macros/s/AKfycbzMi5e-JvqNAQc78M06Iw1E2Gy1jzGl4A7OQXfRZuxpa01Vmxxa/exec'
+
+$('#submit-form').on('click', function(e) {
+  e.preventDefault();
+  var jqxhr = $.ajax({
+    url: url,
+    method: "GET",
+    mode: "cors",
+    dataType: "json",
+    data: $form.serializeObject(),
+    headers: {
+        "Content-Type": "application/json; charset=utf-8",
+        'Access-Control-Allow-Headers': '*',
+        'Access-Control-Allow-Credentials': true,
+        'Access-Control-Allow-Methods': 'GET,PUT,POST,DELETE',
+        "Access-Control-Allow-Origin" : "*"
+    }
+  }).success(
+    // do something
+    console.log('success')
+  );
+})
+</script>
 <script type="module" src="script.js"></script>
